--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,1 +1,209 @@
-html{font-size:15px}*{margin:0;padding:0}*:focus{outline:0}body{font-family:Roboto,Helvetica Neue,sans-serif !important;background-color:#fff}button.no-style{background:none;border:0;color:inherit;font:inherit;line-height:inherit;overflow:ellipsis;padding:0;border-radius:0;min-width:0;outline:0;cursor:pointer}button:focus{outline:0}#player{display:flex;justify-content:space-between;position:fixed;bottom:0;left:0;right:0;background-color:rgba(0,0,0,0.75);padding:1rem;color:#c2c2ca}#player .middle-part{display:flex;flex-direction:column;width:50%}#player .middle-part .progress,#player .middle-part .controls{display:flex;justify-content:space-between;width:100%;flex-direction:row;align-items:center}#player .middle-part .controls{width:15rem;margin:0 auto .5rem}#player .middle-part .controls button{width:2rem;height:2rem;line-height:2rem;text-align:center;font-size:1.1rem}#player .middle-part .controls button.play{width:3rem;height:3rem;line-height:3rem;font-size:2rem}#player .middle-part .controls button.loop.active,#player .middle-part .controls button.shuffle.active{color:#00BCD4}#player .middle-part .progress .bar{background-color:#303030;border-radius:2px;display:flex;height:4px;width:100%;flex:1 100%;cursor:pointer}#player .middle-part .progress .bar div{border-radius:2px;height:4px;width:50%;background:#a0a0a0}#player .middle-part .progress .progress-time{font-size:11px;line-height:16px;letter-spacing:.015em;min-width:40px;text-align:center}#player .now-playing,#player .volume-bar{display:flex;width:25%}#player .now-playing{justify-content:flex-start;align-items:center}#player .now-playing img{display:block;width:4rem;height:4rem;object-fit:contain;margin-right:1rem}#player .now-playing .meta{display:flex;flex-direction:column;flex:1 100%;margin-right:1rem;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}#player .now-playing .meta .title{color:#eee;font-size:.95rem}#player .now-playing .meta .artist-name{font-size:.8rem}#player .volume-bar{justify-content:flex-end;align-items:center}#player .volume-bar button{margin-right:.5rem;width:1rem}#player .volume-bar button i{float:left}#player .volume-bar .fill{background-color:#303030;border-radius:2px;display:flex;height:4px;width:8rem;cursor:pointer}#player .volume-bar .fill div{border-radius:2px;height:4px;width:50%;background:#a0a0a0}
+html {
+    font-size: 15px
+}
+
+* {
+    margin: 0;
+    padding: 0
+}
+
+*:focus {
+    outline: 0
+}
+
+body {
+    font-family: Roboto, Helvetica Neue, sans-serif !important;
+    background-color: #fff
+}
+
+input[type='range'] {
+    cursor: pointer;
+    width: 100%;
+    -webkit-appearance: none;
+    background-color: rgba(255, 0, 0, 0.3);
+}
+
+input[type='range']::-webkit-slider-runnable-track {
+    height: 7px;
+    -webkit-appearance: none;
+    color: rgba(255, 0, 0, 0.3);
+    margin-top: -1px;
+}
+
+input[type='range']::-webkit-slider-thumb {
+    margin-top: -2px;
+    border-radius: 100%;
+    width: 13px;
+    -webkit-appearance: none;
+    height: 13px;
+    cursor: pointer;
+    background: red;
+    padding: 0;
+    box-shadow: -0vw 0 0 0vw rgba(255, 0, 0, 0.6);
+}
+
+input[type=range]::-webkit-fill-lower {
+    background: #777;
+    border-radius: 10px;
+}
+
+input[type=range]::-ms-fill-upper {
+    background: #ddd;
+    border-radius: 10px;
+}
+
+button.no-style {
+    background: none;
+    border: 0;
+    color: inherit;
+    font: inherit;
+    line-height: inherit;
+    overflow: ellipsis;
+    padding: 0;
+    border-radius: 0;
+    min-width: ;
+    outline: 0;
+    cursor: pointer
+}
+
+button:focus {
+    outline: 0
+}
+
+#player {
+    /* display: flex; */
+    /* justify-content: space-between; */
+    min-height: 60px;
+    max-height: 60px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.75);
+    padding: 0;
+    color: #c2c2ca
+}
+
+#player .middle-part {}
+
+#player .middle-part .progress,
+#player .middle-part .controls {
+    width: 100%;
+    height: 100%;
+}
+
+#player .middle-part .controls {
+    width: 15rem;
+    margin: 0 auto .5rem
+}
+
+#player .middle-part .controls button {
+    width: 2rem;
+    height: 2rem;
+    line-height: 2rem;
+    text-align: center;
+    font-size: 1.1rem
+}
+
+#player .middle-part .controls button.play {
+    width: 3rem;
+    height: 3rem;
+    line-height: 3rem;
+    font-size: 2rem
+}
+
+#player .middle-part .controls button.loop.active,
+#player .middle-part .controls button.shuffle.active {
+    color: #00BCD4
+}
+
+#player .middle-part .progress .bar {
+    background-color: #303030;
+    border-radius: 2px;
+    display: flex;
+    height: 4px;
+    width: 100%;
+    flex: 1 100%;
+    cursor: pointer
+}
+
+#player .middle-part .progress .bar div {
+    border-radius: 2px;
+    height: 4px;
+    width: 50%;
+    background: #a0a0a0
+}
+
+#player .middle-part .progress .progress-time {
+    font-size: 11px;
+    line-height: 16px;
+    letter-spacing: .015em;
+    min-width: 40px;
+    text-align: center
+}
+
+#player .now-playing,
+#player .volume-bar {}
+
+#player .now-playing {
+    align-items: center
+}
+
+#player .now-playing img {
+    display: block;
+    width: 4rem;
+    height: 4rem;
+    margin-right: 1rem;
+    margin-left: 2rem;
+    margin-top: 0.5rem;
+}
+
+#player .now-playing .meta {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap
+}
+
+#player .now-playing .meta .title {
+    display: block;
+    color: #eee;
+    font-size: 2rem;
+    margin-left: 0;
+    padding: 0;
+}
+
+#player .now-playing .meta .artist-name {
+    margin-top: 0;
+    font-size: 1rem
+}
+
+#player .volume-bar {
+    justify-content: flex-end;
+    align-items: center
+}
+
+#player .volume-bar button {
+    margin-right: .5rem;
+    width: 1rem
+}
+
+#player .volume-bar button i {
+    float: left
+}
+
+#player .volume-bar .fill {
+    background-color: #303030;
+    border-radius: 2px;
+    display: flex;
+    height: 4px;
+    width: 8rem;
+    cursor: pointer
+}
+
+#player .volume-bar .fill div {
+    border-radius: 2px;
+    height: 4px;
+    width: 50%;
+    background: #a0a0a0
+}
