--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -81,7 +81,8 @@ button:focus {
     right: 0;
     background-color: rgba(0, 0, 0, 0.75);
     padding: 0;
-    color: #c2c2ca
+    color: #c2c2ca;
+    z-index: 100;
 }
 
 #player .middle-part {}
